--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 <!--Link to Name game. -->    
       <a href="https://daltrodg.github.io/curly-disco-delta/" target="game1">
         <button class="btn btn-warning">Go to Name Game!</button></a>
-    
+<!--Link to Source Code. -->    
       <a href="" target="game1">
         <button class="btn btn-warning">Go to Source Code!</button></a> 
-
+<!--Link to Nu Tool. -->
       <a href="" target="game1">
         <button class="btn btn-warning">Go to the Nu Tool Validation!</button></a>
+    </div>
     </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
