--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="https://github.com/daltrodg/super-duper-echo" target="game1">
         <button class="btn btn-warning">Go to Source Code!</button></a> 
 <!--Link to Nu Tool. -->
-      <a href="" target="game1">
+      <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fdaltrodg.github.io%2Fsuper-duper-echo%2F" target="game1">
         <button class="btn btn-warning">Go to the Nu Tool Validation!</button></a>
     </div>
     </div>
