--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
       <h3>Click a Game you want to go to!</h3>
 
 <!--Link to Doge game. -->
-      <a href="https://daltrodg.github.io/special-guide-charlie/" target="game1">
+      <a href="https://daltrodg.github.io/special-guide-charlie/" target="_target">
         <button class="btn btn-warning">Go to Doge Game!</button></a>
 
 <!--Link to Name game. -->    
-      <a href="https://daltrodg.github.io/curly-disco-delta/" target="game1">
+      <a href="https://daltrodg.github.io/curly-disco-delta/" target="_target">
         <button class="btn btn-warning">Go to Name Game!</button></a>
 <!--Link to Source Code. -->    
-      <a href="https://github.com/daltrodg/super-duper-echo" target="game1">
+      <a href="https://github.com/daltrodg/super-duper-echo" target="_target">
         <button class="btn btn-warning">Go to Source Code!</button></a> 
 <!--Link to Nu Tool. -->
-      <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fdaltrodg.github.io%2Fsuper-duper-echo%2F" target="game1">
+      <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fdaltrodg.github.io%2Fsuper-duper-echo%2F" target="_target">
         <button class="btn btn-warning">Go to the Nu Tool Validation!</button></a>
     </div>
     </div>
